tested filler first restriction and improved spacing for divs and fixed a js bug

--- a/static/base.css
+++ b/static/base.css
@@ -1,5 +1,7 @@
 .inline {display:inline;}
+
 .is_hidden {display:none;}
+
 .description { margin:1em;
                padding: 0 5px 0 5px;
                font-style: italic;
@@ -65,4 +67,12 @@ span.text-italic {
 
 span.line {
   display: inline-block;
+}
+
+button.next {
+    margin:15px;
+}
+
+.topspace {
+    margin-top: 5%;
 }
